# car_finder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  car_finder.py  carfind.py  carfinder.py  eda.py  pyproject.toml  pyproject.toml.bak
.github/workflows/: ci.yml  python-tests.yml
carfinder/: __init__.py  __main__.py  cli.py  core.py
src/carfinder/: cli.py
src/carfinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_smoke.py
