[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carfinder"
version = "0.1.0"
description = "CLI to scrape car listings to CSV/SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["requests","beautifulsoup4","pandas"]

[project.scripts]
carfind = "carfinder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
